--- a/document_viewer_frontend/package.json
+++ b/document_viewer_frontend/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/core": "3.12.0",
     "next": "14.2.4",
-    "pdfjs-dist": "^3.4.120",
+    "pdfjs-dist": "3.4.120",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
